# py_ECEF

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/py_ecef/: __about__.py  __init__.py  conversions.py
test/: test_conversions.py
